--- a/gallery/templates/gallery/imageitem_detail.html
+++ b/gallery/templates/gallery/imageitem_detail.html
@@ -1,4 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
 <img src="{{ MEDIA_URL}}{{ object.image }}" alt="{{ object.name}}" title="{{ object.name }}">
 <br>
 <a href="{% url image-list %}">List</a>
 <a href="{% url image-delete pk=object.pk %}">Delete</a>
+{% endblock %}
