--- a/gallery/templates/gallery/imageitem_list.html
+++ b/gallery/templates/gallery/imageitem_list.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 {% load thumbnail %}
 <a href="{% url image-create %}">Create</a><br>
 {% for item in object_list %}
@@ -8,3 +11,4 @@
 </a>
 <br>
 {% endfor %}
+{% endblock %}
